Did more work on home page

--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -1,8 +1,9 @@
 // Brand colors
 // -------------------------
 
-@brand-primary:         #27ae60;
-
+@brand-primary:         #69d2e7;
+@brand-main: #a7dbd8;
+@brand-secondary: #ffedbf;
 
 // Glyphicons path
 // -------------------------
