--- a/assets/less/layouts/_footer.less
+++ b/assets/less/layouts/_footer.less
@@ -1,1 +1,13 @@
-.content-info { }
+.content-info {
+	height:300px;
+	background-color:@brand-primary;
+	.container{
+		margin: 0 auto;
+		.logo{
+			max-width: 300px;
+			margin: 0 auto;
+			margin-top: 75px;
+			display: table;
+		}
+	}
+ }
