--- a/assets/less/layouts/_general.less
+++ b/assets/less/layouts/_general.less
@@ -1,5 +1,29 @@
 // Content wrapper
+.body{
+	padding-top:60px;
+}
+
 .wrap { }
 
 // Main content area
-.main { }
+
+.section-header {
+	text-align:center;
+	color:white;
+	margin-top:40px;
+}
+.section-content {
+	text-align:center;
+	color:white;
+	margin-top:20px;
+}
+.main {
+padding-left:0px;
+padding-right:0px;
+}
+
+.row {
+	margin-left:0px;
+	margin-right:0px;
+}
+
