--- a/assets/less/layouts/pages/_home.less
+++ b/assets/less/layouts/pages/_home.less
@@ -1,18 +1,108 @@
 .home-header{
-	min-height:500px;
+	min-height:575px;
+	background: url(../img/header-background.png) no-repeat center center; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	.logo{
+		max-width:75%;
+		margin-top:100px;
+	}
+	.iphone {
+		max-width: 100%;
+		max-height: 500px;
+		margin-top:60px;
+		@media screen and (min-width: 768px) { }
+	}
+	.slogan {
+		color:white;
+	}
+	.hashtag{
+		color:@brand-main;
+	}
 }
 .how-it-works{
-	min-height:300px;
+	min-height:425px;
+	background-color:@brand-primary;
+	.steps{
+		width:75%;
+		margin: 0 auto;
+		.step{
+			text-align:center;
+			color:white;
+			margin-top:45px;
+			h1{
+				border-radius:100%;
+				border-width:5px;
+				border-color:white;
+				border-style:solid;
+				padding-top:5px;
+				width:60px;
+				height:60px;
+				margin: 0 auto;
+			}
+	}
+	}
 }
 .call-to-action{
 	min-height:100px;
+	background-color:@brand-main;
+	.cta-header{
+		color:white;
+		padding-top:10px;
+		@media screen and (min-width: 992px) { float:left;}
+		text-align:center;
+	}
+	.subscribe{
+		@media screen and (min-width: 992px) { float:right;}
+		color:white;
+		margin-top:20px;
+		margin: 0 auto;
+		margin-bottom:20px;
+
+		display:table;
+		h2{
+			border-radius:5px;
+			border-width:2px;
+			border-color:white;
+			border-style:solid;
+			padding:10px;
+			padding-left:50px;
+			padding-right:50px;
+			width:250px;
+		}
+	}
 }
 .stats{
-	min-height:250px;
+	min-height:225px;
+	.stat{
+		text-align:center;
+		color:#9e9e9e;
+		margin-top:45px;
+	}
 }
 .mission-statement{
-	min-height:250px;
+	min-height:300px;
+	background: url(../img/mission-background.png) no-repeat center center; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+
 }
 .message-from-ceo{
-	min-height:250px;
+	color:#9e9e9e;
+	min-height:350px;
+	.message{
+	margin-top:40px;
+	}
+	background:@brand-secondary;
+	.img-ceo{
+		margin: 0 auto;
+		margin-top:60px;
+		display:table;
+		width:225px;
+		height:225px;
+	}
 }
